Version 3.9.28
- Only use jump table for switch / select if the density is greater than 1/2
- Do small immediate optimizations even in P2 (it was accidentally P1 only)
- Add error if nop instruction is conditionalized
- Improved output formatting code, particularly for floating point

Version 3.9.27
- Fixed a name conflict in some old style C function declarations
- Added CAST operator to BASIC
- Added support in C/C++ output for doing relocation of P2 ASM code at run time (needed for supporting HUB addresses)
- Added CASE_FAST keyword to Spin, and implemented jump tables for C switch, BASIC select, and Spin CASE_FAST
- Added code signature to fastspin.exe

Version 3.9.26
- Added DEF FNA(X)=X form to BASIC
- Fixed declarations of functions inside other C functions
- Fixed SELECT CASE in BASIC when the test is on strings or floats
- Fixed an optimizer bug that affected local arrays
- Fixed space allocation for local arrays in C functions
- On P2, default to 160MHz and 230400 baud if no explicit clkset is given
- Made BASIC read functions support base 16 and base 2 numbers
- Implemented struct assignment for C
- Experimental -z option to compress the code (produces smaller but slower code)

Version 3.9.25
- Unrolled LMM loop some more, for about a 10% performance improvement on code outside of fcache.
- Added --lmm=xxx flag to change LMM interpreter (for test purposes only, really; the default (`orig`) LMM is the best one)
- Changed runtime support code to avoid using CNT shadow register (for GEAR emulator compatibility)
- Added warnings for missing # on jumps
- Fixed scaling of LOC instruction when running in COG mode
- Put spaces between bytes in .lst files.
- Made preprocessor directives like "#define" case-insensitive in Spin and BASIC
- Allow multi-dimensional dim in BASIC
- Add ON x GOTO to BASIC
- Change BASIC number reading code to ignore leading spaces
- Added include/classic.bi, a header file to make porting classic basic games easier.